# Thank you: https://github.com/pypa/sampleproject
# Thank you ChatGPT 4o for helping understand the details 
# 2025-03-28

[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "pyncoda-codebook"
version = "0.1.0"
description = "Package that generates a PDF codebook based on specified data structure and datafile."
readme = "README.md"
requires-python = ">=3.9"
license = "MPL-2.0"
keywords = ["codebook", "pdf", "pyncoda"]
authors = [{ name = "Nathanael Rosenheim", email = "nrosenheim@gmail.com" }]
maintainers = [{ name = "Nathanael Rosenheim", email = "nrosenheim@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

# Dependencies required to run the package
dependencies = [
    "pandas>=2.2,<2.3",
    "numpy>=1.26,<1.27",
    "fpdf2>=2.7,<2.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "black"]      # For development (formatting, debugging, etc.)
test = ["pytest", "coverage"]  # For testing and code coverage
docs = ["sphinx", "mkdocs"]    # For generating documentation

[project.urls]
"Homepage" = "https://github.com/npr99/pyncoda-codebook"
"Repository" = "https://github.com/npr99/pyncoda-codebook"
"Bug Reports" = "https://github.com/npr99/pyncoda-codebook/issues"