[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruchika-shukla-test-package_at2-07172025"
version = "0.1.3"
description = "test package"
authors = [{name="Ruchika Shukla", email="ruchikashuka@tamu.edu"}]
readme = "README.md"
requires-python = ">=3.8"
